[gd_scene load_steps=7 format=3 uid="uid://ckt8i0dx43ex0"]

[ext_resource type="Script" path="res://Scripts/UIController.gd" id="1_24736"]
[ext_resource type="Resource" uid="uid://cn0mwoakbtfhb" path="res://Resources/ScalabilitySettings.tres" id="2_5o1hx"]
[ext_resource type="StyleBox" uid="uid://dwtrhw44g5vck" path="res://Materials/separator_horizontal.tres" id="2_j6um5"]
[ext_resource type="StyleBox" uid="uid://pi0oobce83ay" path="res://Materials/separator_vertical.tres" id="3_8dy65"]
[ext_resource type="Resource" uid="uid://bhft8dubbqr2h" path="res://Resources/LightingScenarios.tres" id="3_jfefo"]

[sub_resource type="LabelSettings" id="LabelSettings_ig5si"]
font_size = 13

[node name="UI" type="Control" node_paths=PackedStringArray("custom_res_text_box", "fps_text", "time_of_day_select", "custom_res", "profiler")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_24736")
settings = ExtResource("2_5o1hx")
lighting_scenarios = ExtResource("3_jfefo")
custom_res_text_box = NodePath("HBoxContainer/VBoxContainer/custom_resolution/custom_resolution_input")
fps_text = NodePath("HBoxContainer/VBoxContainer2/profiler")
time_of_day_select = NodePath("HBoxContainer/VBoxContainer/time_of_day_select")
custom_res = [NodePath("HBoxContainer/VBoxContainer/custom_resolution"), NodePath("HBoxContainer/VBoxContainer/custom_resolution_apply_label")]
profiler = [NodePath("HBoxContainer/VBoxContainer2/profiler"), NodePath("HBoxContainer/VBoxContainer2/HSeparator")]

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -215.0
offset_right = 468.0
offset_bottom = -8.0
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
alignment = 2

[node name="time_of_day_label" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Time Of Day"

[node name="time_of_day_select" type="OptionButton" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
selected = 2
item_count = 4
popup/item_0/text = "Dawn"
popup/item_1/text = "Noon"
popup/item_1/id = 1
popup/item_2/text = "Afternoon"
popup/item_2/id = 2
popup/item_3/text = "Night"
popup/item_3/id = 3

[node name="HSeparator3" type="HSeparator" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = ExtResource("2_j6um5")

[node name="resolution_label" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Render Resolution"

[node name="resolution_select" type="OptionButton" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
selected = 2
item_count = 7
popup/item_0/text = "Native"
popup/item_1/text = "480p"
popup/item_1/id = 1
popup/item_2/text = "720p"
popup/item_2/id = 2
popup/item_3/text = "1080p"
popup/item_3/id = 3
popup/item_4/text = "1440p"
popup/item_4/id = 4
popup/item_5/text = "2160p"
popup/item_5/id = 5
popup/item_6/text = "Custom"
popup/item_6/id = 6

[node name="custom_resolution" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="custom_resolution_input" type="LineEdit" parent="HBoxContainer/VBoxContainer/custom_resolution"]
layout_mode = 2
focus_mode = 1
alignment = 2

[node name="p_label" type="Label" parent="HBoxContainer/VBoxContainer/custom_resolution"]
layout_mode = 2
text = "p"

[node name="custom_resolution_apply_label" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "(Press ENTER to apply)"
label_settings = SubResource("LabelSettings_ig5si")

[node name="HSeparator2" type="HSeparator" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = ExtResource("2_j6um5")

[node name="quality_label" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Quality Scaling"

[node name="quality_select" type="OptionButton" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
selected = 1
item_count = 3
popup/item_0/text = "Low"
popup/item_1/text = "Normal"
popup/item_1/id = 1
popup/item_2/text = "High"
popup/item_2/id = 2

[node name="HSeparator4" type="HSeparator" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = ExtResource("2_j6um5")

[node name="Button" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Quit Demo"

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2
theme_override_styles/separator = ExtResource("3_8dy65")

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
alignment = 2

[node name="profiler" type="Label" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "FPS: 120
"

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_styles/separator = ExtResource("2_j6um5")

[node name="hide_label" type="Label" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "To hide/unhide UI, press H"

[node name="HSeparator2" type="HSeparator" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_styles/separator = ExtResource("2_j6um5")

[node name="hint_label" type="Label" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "To capture/uncapture cursor, press ESC"

[connection signal="item_selected" from="HBoxContainer/VBoxContainer/time_of_day_select" to="." method="_on_time_selected"]
[connection signal="item_selected" from="HBoxContainer/VBoxContainer/resolution_select" to="." method="_on_res_selected"]
[connection signal="text_submitted" from="HBoxContainer/VBoxContainer/custom_resolution/custom_resolution_input" to="." method="_on_custom_res_input"]
[connection signal="item_selected" from="HBoxContainer/VBoxContainer/quality_select" to="." method="_on_quality_selected"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Button" to="." method="_on_quit_selected"]
